k8s_manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      name: webapp-pod
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp-con  
          image: charanreddy12/webapp:imageTag
          ports:
            - containerPort: 8080
